edit bad smells